2006-06-01  Alp Toker  <alp@atoker.com>

	* browser.cs: Fix a crash when search field is empty

2006-05-04  Alp Toker  <alp@atoker.com>

	* monodoc.desktop.in: Fix #77012
	- Gtk+ automatically supports StartupNotify, so enable it
	- Make Comment imperative as suggested by spec
	- Version is the version of the spec -- 1.0 seems acceptable

2006-02-21  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* Makefile.am:
	        - Removed monodoc.in and addead monodoc to DISTCLEANFILES.

2005-11-20  Rafael Ferreira <raf@ophion.org>
	* browser.cs:
		- Added try/catch just in case the provider 
		throws an exception
	* BookmarkManager.cs:
		- Removed try/catch logic since it will be
		handled by the browser

2005-11-05  Rafael Ferreira <raf@ophion.org>
	* browser.cs:
		- Changes to make the browser a public object,
		removed old bookmark logic
	* BookmarkManager.cs:
		- Manages all of the bookmark logic (new)
	* browser.glade:
		- removed edit_bookmark, added manage_bookmarks_dialog
		and add_bookmark_dialog
	* Makefile.am:
		- added BookmarkManager.cs

2005-10-27  Ben Maurer  <bmaurer@ximian.com>

	* Makefile.am (monodocdir): Don't use -pkg, but rely on the stuff
	from configure.in.

	* monodoc.in: Set LD_LIBRARY_PATH to include gecko, borrowed from
	Monodevelop.

	* GeckoHtmlRender.cs: Use an error dialog.

	This removes the dependency on gtkhtml.
	
	* Makefile.am: GtkHtml is put in its own assembly

	* GtkHtmlHtmlRender.cs: Don't use a private api, so that we can
	put this in another assembly

	* browser.cs: gtkhtml rendering is now loaded dynamically

	* GeckoHtmlRender.cs: Make printing optional

2005-10-21 Mario Sopena <mario.sopena@gmail.com>
	* browser.cs: Workaround to fix the stealing focus bug #76346

2005-10-10 Mario Sopena <mario.sopena@gmail.com>
	* browser.cs: when saving edit changes, take into account that uncompiled
	sources are handled differently
	
2005-09-16 Mario Sopena <mario.sopena@gmail.com>