@@ -1,3 +1,9 @@
+2006-08-09  Mike Kestner  <mkestner@novell.com>
+
+	* browser.cs: fix a few event handler sigs.
+	* GeckoHtmlRender.cs : some print namespace clarification.
+	* GtkHtmlHtmlRender.cs : some print namespace clarification.
+
 2006-06-01  Alp Toker  <alp@atoker.com>
 
 	* browser.cs: Fix a crash when search field is empty
